# httk-io

./: Makefile  README.md  RELEASING.md  pyproject.toml
.github/workflows/: release.yml
docs/: conf.py  index.md  poscar.md
docs/_inventories/: httk-core.inv
docs/reference/: index.md
examples/: parse_cif.py  parse_poscar.py
src/httk/handlers/io/: __init__.py
src/httk/io/: __init__.py  _register.py
src/httk/io/cif/: __init__.py  cif_parser.py  cif_reader.py  cif_writer.py  expand_asu.py  mcif_parser.py  symops_utils.py
src/httk/io/vasp/: __init__.py  poscar_reader.py
tests/: test_cif_roundtrip.py  test_import.py  test_load.py  test_poscar.py  test_registration.py
