[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "httk-io"
version = "1.0.0"
description = "Read cif and mcif files"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Rickard Armiento", email = "gitcommits@armiento.net" }]

dependencies = [
  "httk-core>=1.0.0,<2"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

